k8s-deployment-manifests/backend-deployment.yaml
apiVersion: apps/v1
metadata:
  name: small-basket-backend
  namespace: small-basket
kind: Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: small-basket-backend
  template:
    metadata:
      labels:
        app: small-basket-backend
        project: small-basket
    spec:
      containers:
        - name: api
          image: kesaripatil/small-basket-backend:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: small-basket-backend
  namespace: small-basket
spec:
  selector:
    app: small-basket-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
