k8s-deployment-manifests/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: small-basket-database
  namespace: small-basket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: small-basket-database
  template:
    metadata:
      labels: 
        app: small-basket-database
        project: small-basket
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports: 
          - containerPort: 3306
          volumeMounts: 
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: small-basket-pvc
        - name: initdb
          configMap:
            name: mysql-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: small-basket-database-svc
  namespace: small-basket
spec:
  selector:
    app: small-basket-database
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
