k8s-deployment-manifests/small-basket-healthz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: small-basket-health
  namespace: small-basket
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: small-basket-frontend-svc
                port:
                  number: 3000
